--- a/train.html
+++ b/train.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Training</title>
     <link rel="stylesheet" href="style.css">
+    <script src="train.js" defer></script>
 </head>
 
 <body>
@@ -15,8 +16,10 @@
             <button id='checkBtn'>check</button>
         </div>
         <div class="settings">
-            <label><input type="number">words to train</label>
-            <label><input type="number">times to repeat</label>
+            <label><input type="number" min="1" id="numberInp">words to train</label>
+            <label><input type="number" min="1" max="5" id="timesInp" value="1">
+                times to repeat
+            </label>
         </div>
     </main>
 
