startTraining, stepTraining, trainWord functions

--- a/train.html
+++ b/train.html
@@ -12,7 +12,8 @@
 <body>
     <main>
         <div class='inputs'>
-            <input type="text"><input type="text">
+            <input id="showInp">
+            <input id="typeInp">
             <button id='checkBtn'>check</button>
         </div>
         <div class="settings">
