addWordToList, custom trainig

--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
     </main>
 
     <aside>
-        <ul class="words">
-            <li>word - слово</li>
-            <li>word - слово</li>
-            <li>word - слово</li>
+        <ul class="words" id='wordList'>
+            
         </ul>
     </aside>
 
