--- a/train.html
+++ b/train.html
@@ -25,10 +25,8 @@
     </main>
 
     <aside>
-        <ul class='words'>
-            <li>word - слово</li>
-            <li>word - слово</li>
-            <li>word - слово</li>
+        <ul class='words' id='wordList'>
+            
         </ul>
     </aside>
 </body>
